<package>
  <name>unreal_camera_info_pub</name>
  <version>0.0.0</version>
  <description>Scripts to publish camera info for unreal images: to help input into stereo packages</description>
  <author>Benjamin Morrell</author>
  <maintainer email="benjamin.morrell1@gmail.com">Benjamin Morrell</maintainer>
  <license>Apache 2.0</license>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
